Fix spacing with 5 characters'

--- a/styles.css
+++ b/styles.css
@@ -92,9 +92,10 @@ header {
 .classic-mode-results {
   display: flex;
   justify-content: space-around;
+  grid-column: 1/2;
   /* align-items: center; */
   grid-row: 2;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .player-choice {
@@ -111,7 +112,7 @@ figure {
   height: 45%;
   margin: 0;
   font-size:100%;
-  padding: 2%;
+  /* padding: 2%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
